Initial commit of all project files

--- a/Fashion_MNIST.ipynb
+++ b/Fashion_MNIST.ipynb
@@ -269,12 +269,12 @@
     "generator = nn.Sequential(\n",
     "    # in: latent_size x 1 x 1\n",
     "    nn.ConvTranspose2d(latent_size, 128, kernel_size=7, stride=1, padding=0, bias=False),\n",
-    "    nn.BatchNorm2d(512),\n",
+    "    nn.BatchNorm2d(128),\n",
     "    nn.ReLU(True),\n",
     "    # out: 128 x 7 x 7\n",
     "\n",
     "    nn.ConvTranspose2d(128, 64, kernel_size=4, stride=2, padding=1, bias=False),\n",
-    "    nn.BatchNorm2d(256),\n",
+    "    nn.BatchNorm2d(64),\n",
     "    nn.ReLU(True),\n",
     "    # out: 64 x 14 x 14\n",
     "\n",
@@ -377,7 +377,7 @@
     "\n",
     "    # Generate fake images\n",
     "    latent = torch.randn(batch_size, latent_size, 1, 1)\n",
-    "    fake_images = generator(latent).detach()\n",
+    "    fake_images = generator(latent)\n",
     "\n",
     "    # Try to fool the discriminator\n",
     "    preds = discriminator(fake_images)\n",
@@ -483,10 +483,10 @@
     "\n",
     "        for real_images, _ in tqdm(train_dl):\n",
     "            # Train discriminator\n",
-    "            loss_d, real_score, fake_score = discriminator(real_images, opt_d)\n",
+    "            loss_d, real_score, fake_score = train_discriminator(real_images, opt_d)\n",
     "\n",
     "            # Train generator \n",
-    "            loss_g = generator(opt_g)\n",
+    "            loss_g = train_generator(opt_g)\n",
     "\n",
     "            epoch_d_loss += loss_d\n",
     "            epoch_g_loss += loss_g\n",
